# opengl_33_experiments

./: .gitignore  README.md
BasicColors/: CMakeLists.txt  fragment.fs  lamp.fs  lamp.vs  main.cc  vertex.vs
BasicColors/include/: shader.h
camera_navigation/: CMakeLists.txt
camera_navigation/include/: camera.h  shader.h
camera_navigation/src/: CMakeLists.txt  camera_nav.cc  fragment_shader.fs
coord_systems/: CMakeLists.txt
coord_systems/src/: CMakeLists.txt  coord_systems.cc  fragment_shader.fs  vertex_shader.vs
environment_test/: CMakeLists.txt
environment_test/src/: CMakeLists.txt  cmake_install.cmake  env_test.cc
textures/: CMakeLists.txt
textures/src/: CMakeLists.txt  fragment_shader.fs  textures.cc  vertex_shader.vs
triangle/: CMakeLists.txt
triangle/glad/src/: CMakeLists.txt  glad.c
triangle/src/: CMakeLists.txt  triangle.cc
uniforms/: .gitignore  CMakeLists.txt
uniforms/glad/include/glad/: glad.h
uniforms/src/: CMakeLists.txt  shader.h  uniforms.cc  vertex_shader.vs
